--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Downcase Repository Name
-        run: |
-          echo "REPO=${GITHUB_REPOSITORY,,}" >> ${GITHUB_ENV}
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
@@ -33,8 +29,8 @@ jobs:
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
-          username: ${{ github.actor }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker Buildx
@@ -45,9 +41,9 @@ jobs:
             --cache-to "type=local,dest=/tmp/.buildx-cache" \
             --platform linux/arm64,linux/amd64 \
             --output "type=image,push=true" \
-            --tag docker.pkg.github.com/${REPO}/safari:${{ github.sha }} \
+            --tag ghcr.io/denizugur/safari:${{ github.sha }} \
             --file ./Dockerfile ./
 
       - name: Inspect image
         run: |
-          docker buildx imagetools inspect docker.pkg.github.com/${REPO}/safari:${{ github.sha }}
+          docker buildx imagetools inspect ghcr.io/denizugur/safari:${{ github.sha }}
